# turboquant

./: .gitignore  README.md
.github/workflows/: ci.yml  release.yml
python/: build_lib.py  pyproject.toml
python/tests/: test_turboquant.py
python/turboquant/: __init__.py  _ffi.py
python/turboquant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/turboquant/lib/: libturboquant.dylib
scripts/: plot_quality.py
turboquant/: .gitignore  README.md  build.zig
turboquant/include/: turboquant.h
turboquant/src/: c_api.zig  math.zig  profile.zig  qjl.zig  rotation.zig  turboquant.zig
