[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turboquant"
version = "0.1.0"
description = "Near-optimal vector compression with fast dot product estimation"
requires-python = ">=3.9"
license = "MIT"
dependencies = ["numpy>=1.20.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
